# lnd-rust

./: .gitignore  Cargo.toml  README.md  build.rs
protos/: rpc.proto
src/: lib.rs  macaroon_data.rs  main.rs  rpc.rs  rpc_grpc.rs  tls_certificate.rs
tools/: bitcoin-cli.sh  lncli1.sh  lncli2.sh  lncli3.sh  start-lnd-1.sh  start-lnd-2.sh  start-lnd-3.sh
