[package]
name = "lnd-rust"
version = "0.2.2"
authors = ["LightningPeach <contact@lightningpeach.com>"]
description = "Rust binding to the Lightning Network Daemon"
readme = "README.md"
license = "MIT"

[dependencies]
protobuf = "2.*"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api = "0.*"
httpbis = "~0.7"
grpc = "0.5.0"
tls-api-native-tls = "0.1.1"
bytes = "0.*"

[build-dependencies]
protoc-rust-grpc = "0.5.0"
