[package]
name = "lnd-rust"
version = "0.5.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
description = "Rust binding to the Lightning Network Daemon"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LightningPeach/lnd-rust"
edition = "2018"

[dependencies]
protobuf = "2.8"
futures = "0.1"
futures-cpupool = "0.1"
httpbis = "0.7"
grpc = "0.6"
tls-api = "0.1"
tls-api-native-tls = "0.1"
bytes = "0.4"

[build-dependencies]
protoc-rust-grpc = "0.6"
